--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -57,7 +57,7 @@
         <p>{{ post.created_at }}</p>
         <hr>
         <!-- Preview Image -->
-        <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+        <img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="">
         <hr>
         <!-- Post Content -->
         <p>{{ post.content }}</p>
