--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html>
     <head>
-        <title>blog</title>
+        <title>Blog</title>
         <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen">
         <script src="https://kit.fontawesome.com/a6f82018fe.js" crossorigin="anonymous"></script>
     </head>
@@ -73,32 +73,35 @@
 
         <div class="container my-3">
             <div class="row">
-                <div class="col-md-8 col-lg-9">
+                <div class="col-md-8 col-lg-9" id="main-area">
                     <h1>Blog
                     </h1>
+                {% if post_list.exists %}
                     {% for p in post_list %}
                     <div class="card mb-4">
-                        {% if p.head_image %}
-                            <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }} head image">
-                        {% else %}
-                            <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
-                        {% endif %}
-                        <div class="card-body">
-                            <h2 class="card-title h4">{{ p.title }}</h2>
-                            {% if p.hook_text %}
-                                <h5 class="text-muted">{{ p.hook_text }}</h5>
+                            {% if p.head_image %}
+                                <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }} head image">
+                            {% else %}
+                                <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
                             {% endif %}
+                            <div class="card-body">
+                                <h2 class="card-title h4">{{ p.title }}</h2>
+                                {% if p.hook_text %}
+                                    <h5 class="text-muted">{{ p.hook_text }}</h5>
+                                {% endif %}
 
-                            <p class="card-text">{{ p.content | truncatewords:45 }}</p>
-                            <a href="{{ p.get_absolute_url }}" class="btn btn-primary" href="#!">Read more →</a>
+                                <p class="card-text">{{ p.content | truncatewords:45 }}</p>
+                                <a href="{{ p.get_absolute_url }}" class="btn btn-primary" href="#!">Read more →</a>
+                            </div>
+                            <div class="card-footer text_muted">
+                                Posted on {{ p.created_at }} by
+                                <a href="#">작성자명 쓸 위치(개발예정)</a>
+                            </div>
                         </div>
-                        <div class="card-footer text_muted">
-                            Posted on {{ p.created_at }} by
-                            <a href="#">작성자명 쓸 위치(개발예정)</a>
-                        </div>
-                    </div>
                     {% endfor %}
-
+                {% else %}
+                    <h3>아직 게시물이 없습니다.</h3>
+                {% endif %}
                     <nav aria-label="Pagination">
                         <hr class="my-0" />
                         <ul class="pagination justify-content-center my-4">
