--- a/blog/templates/blog/footer.html
+++ b/blog/templates/blog/footer.html
@@ -1,3 +1,5 @@
 <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Seong Min</p></div>
-        </footer>
+            <div class="container">
+                <p class="m-0 text-center text-white">Seong Min</p>
+            </div>
+</footer>
